# sublime-rules

./: .gitattributes  .gitignore  Create impersonation_mailgun.yml  JanuaryW(vnp234).wsf  LICENSE  README.md  attachment_html_smuggling_qr_code.yml  attachment_pdf_link_to_zip_no_creator.yml  body_mismatching_ios_mailer.yml  credential_phishing_fake_password_expiration.yml  impersonation_employee_via_google_groups.yml  impersonationa_Sublime_security_domain.yml  link_ipfs_phishing.yml  link_metamask_impersonation_phishing_suspicious_link.yml  link_office_dde_function.yml  link_qr_code_in_img_or_pdf_with_phishing_disposition.yml  link_sharepoint_sus_name.yml  link_suspicious_message_unscannable_cloudflare.yml  malspam_fake_shipping_notification_free_file_host.yml  response.txt  ta4903_PDF_Phish
scripts/iok-converter/: .gitignore  README.md  main.py  pyproject.toml
scripts/iok-converter/downloaded_iok_rules/: 123-reg-63c26.yml  1password-191635.yml  account-deletion-countdown.yml  actionforms-io.yml  adobe-5c70696.yml  amadey-botnet-afb0c86a.yml  amazon-jp-28bd59a.yml  amazon-token-cryptocurrency-scam-shfxgk.yml  amerant-bank-4tfevg.yml  anpost-7b94e511.yml  anz-bank-cd6ec9e7.yml  apple-icloud-467ab986.yml  ark-investment-crypto-3465f6c.yml  asli-crypto-drainer-ea8f67e.yml  avis-0fbd3ca.yml  avvillas-a5lnamb9.yml  banco-atlantida-dxde4jyt.yml  banco-cuscatlan-sdtltm.yml  banco-davivienda-067fef0.yml  banco-de-crédito-del-perú-xejfkd.yml  banco-de-galicia-2mo4sf.yml  banco-de-galicia-bd53a32.yml  banco-de-galicia-npy0f6km.yml  banco-de-galicia-vyk7k7oo.yml  (+242 more)
(+5966 files in other folders)
